<resources>
    <string name="app_name">Moodvies</string>
    <string name="movie_genre">Genres</string>
    <string name="try_again">Try Again</string>
    <string name="date_with_duration">%1$s • %2$s mins</string>
    <string name="read_more">Read more</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="information">Information</string>
    <string name="original_title">Original Title</string>
    <string name="status">Status</string>
    <string name="runtime">Runtime</string>
    <string name="original_language">Original Language</string>
    <string name="production_countries">Production Countries</string>
    <string name="companies">Companies</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="trailers">Trailers</string>
    <string name="close">Close</string>
    <string name="no_trailer_available">No video trailers are available.</string>
    <string name="no_reviews_available">No reviews available for this movie.</string>
</resources>